# engram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  cli.py  db.py  engram.bash  engram.fish  install.sh  pty_wrapper.py  pyproject.toml  redact.py  test.yml
engram/: __init__.py  __main__.py  cli.py  db.py  embeddings.py  llm.py  pty_wrapper.py  redact.py
scripts/: install.sh
shell/: engram.bash  engram.fish  engram.zsh
tests/: test_cli.py  test_db.py  test_embeddings.py  test_redact.py
